# GameTranslator

./: .gitignore  README.md  main.py  pyproject.toml
src/gametranslator/: __init__.py
src/gametranslator/config/: __init__.py  embedding_provider_manager.py  embedding_providers.json  llm_provider_manager.py  llm_providers.json  settings.py
src/gametranslator/core/: __init__.py  llm_translator.py  ocr.py  screen_capture.py  translation_service.py  translation_worker.py  translator.py  vocabulary_db.py
src/gametranslator/data/: __init__.py  vocabulary.py
src/gametranslator/ui/: __init__.py  floating_window.py  hotkey_manager.py  main_window.py  screen_selector.py  vocabulary_view.py
src/gametranslator/ui/styles/: dark_theme.qss  light_theme.qss
